# labelapi

./: .gitignore  Audience API v2.pptx  Audience Issue 2.pptx  Audience 站台1.3.pptx  Audience 開發前 review.pptx  AudienceAPI_v2.1.pptx  Dockerfile  Makefile  README.md  async_tasks.py  audience_api.py  author_name_keyword.json  celery_worker.py  data_sources.yaml  definition.py  dependencies.py  get_env.sh  label_api.py  main.py  model_config.yaml  pyproject.toml  regex_checker.py  release_review.pptx  requirements.in  requirements.txt  requirements_database_list_1.txt  requirements_database_list_2.txt  run_2021.sh  run_task_cli.py  run_tasks.py  scrap_data.py  settings.py  setup.sh  start_up.sh  system_config.yaml  test.py
apis/: documenting_api.py  modeling.py  modeling_api.py  predicting.py  predicting_api.py  preprocessing_api.py
documents/: Audience-API.md  Audience-Django.md
dump/: config.ini  dump_production.py  fix.py
files/: stopWords.txt
graph/: modeling_api.drawio
model_files/: Audience Issue 2.pptx
models/: audience_data_interfaces.py  audience_model_interfaces.py  audience_models.py  keyword_model.py  model_creator.py  random_forest_model.py  rf_model.py  rule_model.py  term_weight_feature_extractor.py  tw_model.py
tests/: readme.md  test_audience_models.py  test_tokenizers.py
utils/: api_core.py  clean_up_result.py  config_helper.py  connection_helper.py  data_helper.py  database_core.py  database_utils.py  enum_config.py  exception_manager.py  general_helper.py  helper.py  input_example.py  model_core.py  model_helper.py  model_table_creator.py  (+9 more)
(+92 files in other folders)
