[tool.poetry]
name = "audience_api"
version = "2.3.0"
description = ""
authors = ["Weber Huang"]

[tool.poetry.dependencies]
python = "3.8"
ahocorapy = "1.6.1"
aiofiles = "0.8.0"
amqp = "5.0.6"
asgiref = "3.4.1"
billiard = "3.6.4.0"
celery = "5.1.2"
cffi = "1.14.6"
click = "7.1.2"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
colorama = "0.4.4"
decorator = "5.1.1"
fastapi = "0.68.1"
future = "0.18.2"
gevent = "21.8.0"
greenlet = "1.1.2"
h11 = "0.12.0"
httptools = "0.2.0"
jieba = "0.42.1"
joblib = "1.1.0"
kombu = "5.1.0"
numpy = "1.21.2"
pandas = "1.3.3"
prompt-toolkit = "3.0.20"
py = "1.11.0"
pycparser = "2.20"
pydantic = "1.8.2"
PyMySQL = "1.0.2"
python-dateutil = "2.8.2"
python-dotenv = "0.19.0"
python-multipart = "0.0.5"
pytz = "2021.1"
PyYAML = "5.4.1"
redis = "3.5.3"
retry = "0.9.2"
scikit-learn = "1.0.2"
scipy = "1.7.3"
six = "1.16.0"
sklearn = "0.0"
SQLAlchemy = "1.4.25"
sqlalchemy2-stubs = "0.0.2a17"
sqlmodel = "0.0.4"
starlette = "0.14.2"
threadpoolctl = "3.0.0"
tqdm = "4.62.3"
typing-extensions = "3.10.0.2"
uvicorn = {version = "0.15.0", extras = ["standard"]}
vine = "5.0.0"
watchgod = "0.7"
wcwidth = "0.2.5"
websockets = "10.0"
"zope.event" = "4.5.0"
"zope.interface" = "5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
